修复Docker挂载和422错误问题
- 修复前端热重载：添加skyvern-ui服务的源代码挂载卷
- 解决422错误：启用Vaultwarden和Bitwarden CLI服务
- 更新测试配置：修复Vitest兼容性问题
- 添加浏览器选择组件测试文件

Changes:
- docker-compose.yml: 添加前端开发模式挂载和Vaultwarden服务
- skyvern-frontend: 更新测试配置和依赖
- 新增浏览器API和类型定义文件

--- a/cc_config.json
+++ b/cc_config.json
@@ -1,12 +1,12 @@
 ﻿{
     "MCPChoiceName":  "跳过MCP设置      不做MCP配置，继续后续流程",
-    "ProviderKey":  "ms-fb3172ba-cb44-4675-b23b-cc505ffde93e",
-    "ProviderName":  "modelscope9",
+    "ProviderKey":  "sk-d1fff71e09471b95ce05897ccf0d0a94",
+    "ProviderName":  "iflow1",
     "MCPChoice":  0,
-    "LastUsedDate":  "2025-10-19 23:29:51",
+    "LastUsedDate":  "2025-10-20 03:19:12",
     "Terminal":  "Windows Terminal",
-    "ProviderUrl":  "https://api-inference.modelscope.cn/v1",
+    "ProviderUrl":  "https://apis.iflow.cn/v1",
     "Model":  "glm-4.6",
     "WorkingDir":  "D:\\OneDrive\\steven\\code\\1\\ads2\\skyvern-main",
-    "ProviderId":  9
+    "ProviderId":  1
 }
